[package]
name = "like_pipe"
version = "0.1.0"
authors = ["Praxis <hello@vulpinecat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.14.0"
tokio = { version = "0.2.22", features = ["full"] }
dotenv = "0.15.0"
rusqlite = "0.23.1"
anyhow = "1.0"
