[package]
name = "newpipe-engager"
version = "0.1.0"
authors = ["Praxis <hello@vulpinecat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.14.0"
tokio = { version = "0.2.22", features = ["full"] }
dotenv = "0.15.0"
rusqlite = "0.24.0"
anyhow = "1.0"
indicatif = "0.15.0"
ron = "0.6.1"
serde = "1.0.115"
dirs = "3.0.1"
